@@ -23,6 +23,7 @@
 //
 
 using System;
+using System.Collections.Generic;
 using Cumberland;
 
 using NUnit.Framework;
@@ -48,6 +49,16 @@ namespace Cumberland.Tests
 			string wkt = "MULTILINESTRING((0 0 0,1 1 0,1 2 1),(2 3 1,3 2 1,5 4 1))";
 			
 			WellKnownText.ParseMultiLineString(wkt);
+		}
+		
+		[Test]
+		public void TestWKTMultiPolygon()
+		{
+			string wkt = "MULTIPOLYGON(((0 0 0,4 0 0,4 4 0,0 4 0,0 0 0),(1 1 0,2 1 0,2 2 0,1 2 0,1 1 0)),((-1 -1 0,-1 -2 0,-2 -2 0,-2 -1 0,-1 -1 0)))";
+			
+			List<Polygon> l = WellKnownText.ParseMultiPolygon(wkt);
+			
+			Assert.IsTrue(l.Count == 2);
 		}
 	}
 }
