@@ -1,3 +1,7 @@
+2008-10-22  Scott Ellington <scott.ellington@gmail.com> 
+
+	* Cumberland.Data.PostGIS/PostGIS.cs: add multipolygon wkt support
+
 2008-10-20  Scott Ellington <scott.ellington@gmail.com> 
 
 	
